Fix incorrect min-width for mobile screen sizes
min-width was previously set to 736px for all screen sizes, which forced
content off screen for smaller devices such as mobile phones. This
modifies the search stylesheet to only apply a min-width style to
devices > 800px wide.

--- a/app/static/css/search.css
+++ b/app/static/css/search.css
@@ -1,7 +1,10 @@
 body {
     display: block !important;
     margin: auto !important;
-    min-width: 736px !important;
+}
+
+.vvjwJb {
+    font-size: 16px !important;
 }
 
 .autocomplete {
@@ -48,4 +51,10 @@ details summary span {
 
 .ip-text-div {
     padding-top: 0 !important;
+}
+
+@media (min-width: 801px) {
+    body {
+        min-width: 736px !important;
+    }
 }
